--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>net.shibboleth</groupId>
-        <artifactId>master</artifactId>
+        <artifactId>parent</artifactId>
         <version>1</version>
     </parent>
 
