--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,23 @@
     <properties>
         <svn.relative.location>utilities/tomcat6-dta-ssl</svn.relative.location>
     </properties>
+    
+    <repositories>
+        <repository>
+            <id>shib-release</id>
+            <url>https://shibboleth.net/nexus/content/groups/public</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>shib-snapshot</id>
+            <url>https://shibboleth.net/nexus/content/repositories/snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+        </repository>
+    </repositories>
 
     <dependencies>
         <!-- Compile dependencies -->
