--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,30 @@
+buildscript {
+    repositories {
+        maven { url "http://repo.springsource.org/plugins-release" }
+    }
+    dependencies {
+        classpath "org.springframework.build.gradle:propdeps-plugin:0.0.4"
+    }
+}
+
+configure(allprojects) {
+    apply plugin: 'propdeps'
+    apply plugin: "propdeps-idea"
+    apply plugin: "propdeps-eclipse"
+}
+
+subprojects {
+    apply plugin: "java"
+    apply plugin: "maven"
+
+    group = "edu.internet2.middleware.security.tomcat"
+    version = "1.1-SNAPSHOT"
+
+    repositories {
+        mavenCentral()
+    }
+}
+
 task wrapper(type: Wrapper) {
     gradleVersion = "1.7"
 }
